<resources>
    <string name="app_name" translatable="false">Messages</string>
    <string name="shortcut_compose_long_label">New conversation</string>
    <string name="shortcut_compose_short_label">Compose</string>
    <string name="shortcut_compose_disabled_message">Shortcut disabled</string>
    <string name="title_archived">Archived</string>
    <string name="title_settings">Settings</string>
    <string name="title_notification_prefs">Notifications</string>
    <string name="title_theme">Theme</string>
    <string name="title_conversations">Search inbox…</string>
    <string name="title_compose">Type a name or number</string>
    <string name="title_qksms_plus" translatable="false">QKSMS+</string>
    <string name="setup_skip">Skip</string>
    <string name="setup_next">Continue</string>
    <string name="menu_add_person">Edit recipients</string>
    <string name="menu_view_recipients">View recipients</string>
    <string name="menu_more_ellipsis">More...</string>
    <string name="main_menu_select_multiple">Select multiple</string>
    <plurals name="conversations_selected_toast">
        <item quantity="one">%d conversation selected</item>
        <item quantity="other">%d conversations selected</item>
    </plurals>
    <string name="compose_menu_search">Search</string>
    <plurals name="contacts_selected_toast">
        <item quantity="one">%d contact selected</item>
        <item quantity="other">%d contacts selected</item>
    </plurals>
    <string name="menu_call">Call</string>
    <string name="menu_info">Details</string>
    <string name="menu_save">Save to gallery</string>
    <string name="menu_share">Share</string>
    <string name="main_drawer_open_cd">Open navigation drawer</string>
    <string name="main_title_selected">%d selected</string>
    <string name="main_menu_clear">Clear</string>
    <string name="main_menu_archive">Archive</string>
    <string name="main_menu_unarchive">Unarchive</string>
    <string name="main_menu_delete">Delete</string>
    <string name="main_menu_add_contact">Add to contacts</string>
    <string name="main_menu_mute">Mute</string>
    <string name="main_menu_unmute">Unmute</string>
    <string name="main_menu_pin">Pin to top</string>
    <string name="main_menu_unpin">Unpin</string>
    <string name="main_menu_read">Mark read</string>
    <string name="main_menu_unread">Mark unread</string>
    <string name="main_menu_block">Block</string>
    <string name="main_syncing">Syncing messages…</string>
    <string name="main_sender_you">You: %s</string>
    <string name="main_draft">Draft</string>
    <string name="main_message_results_title">Results in messages</string>
    <string name="main_message_results">%d messages</string>
    <string name="inbox_empty_text">Your conversations will appear here</string>
    <string name="inbox_search_empty_text">No results</string>
    <string name="archived_empty_text">Your archived conversations will appear here</string>
    <string name="main_fab_cd">Start new conversation</string>
    <string name="main_default_sms_title">Love texting again</string>
    <string name="main_default_sms_message">Make QKSMS your default SMS app</string>
    <string name="main_default_sms_change">Change</string>
    <string name="main_permission_required">Permission required</string>
    <string name="main_permission_sms">QKSMS needs permission to send and view SMS messages</string>
    <string name="main_permission_contacts">QKSMS needs permission to view your contacts</string>
    <string name="main_permission_allow">Allow</string>
    <string name="drawer_inbox">Inbox</string>
    <string name="drawer_archived">Archived</string>
    <string name="drawer_scheduled">Scheduled</string>
    <string name="drawer_blocking">Blocking</string>
    <string name="drawer_more">More</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_plus" translatable="false">QKSMS+</string>
    <string name="drawer_help">Help &amp; feedback</string>
    <string name="drawer_invite">Invite friends</string>
    <string name="drawer_plus_banner_title" translatable="false">QKSMS+</string>
    <string name="drawer_plus_banner_summary">Unlock amazing new features, and support development</string>
    <string name="rate_title">Enjoying QKSMS?</string>
    <string name="rate_summary">Share some love and rate us on Google Play!</string>
    <string name="rate_okay">OKAY!</string>
    <string name="rate_dismiss">DISMISS</string>
    <string name="dialog_delete_title">Delete</string>
    <plurals name="dialog_delete_message">
        <item quantity="one">Are you sure you would like to delete this conversation?</item>
        <item quantity="other">Are you sure you would like to delete %d conversations?</item>
    </plurals>
    <string name="message_options">Message options</string>
    <string name="compose_number_picker_title">Choose a phone number</string>
    <string name="compose_number_picker_default">%s ∙ Default</string>
    <string name="compose_number_picker_once">Just once</string>
    <string name="compose_number_picker_always">Always</string>
    <string name="compose_title_selected">%d selected</string>
    <string name="compose_subtitle_results">%1$d of %2$d results</string>
    <string name="compose_send_group_title">Send as group message</string>
    <string name="compose_send_group_summary">Recipients and replies will be visible to everyone</string>
    <string name="compose_messages_empty">This is the start of your conversation. Say something nice!</string>
    <string name="compose_vcard_label">Contact card</string>
    <string name="compose_scheduled_for">Scheduled for</string>
    <string name="compose_scheduled_future">Selected time must be in the future!</string>
    <string name="compose_scheduled_plus">You must unlock QKSMS+ to use scheduled messaging</string>
    <string name="compose_scheduled_toast">Added to scheduled messages</string>
    <string name="compose_repeat_title">Repeat</string>
    <string name="compose_repeat_none">Just once</string>
    <string name="compose_repeat_daily">Daily</string>
    <string name="compose_repeat_weekly">Weekly</string>
    <string name="compose_repeat_monthly">Monthly</string>
    <string name="compose_recurring_text_only">Recurring messages support text only</string>
    <string name="compose_hint">Write a message…</string>
    <string name="compose_menu_copy">Copy text</string>
    <string name="compose_menu_forward">Forward</string>
    <string name="compose_menu_delete">Delete</string>
    <string name="compose_menu_mute">Mute</string>
    <string name="compose_menu_unmute">Unmute</string>
    <string name="compose_menu_previous">Previous</string>
    <string name="compose_menu_next">Next</string>
    <string name="compose_menu_clear">Clear</string>
    <string name="compose_details_title">Message details</string>
    <string name="compose_details_type">Type: %s</string>
    <string name="compose_details_from">From: %s</string>
    <string name="compose_details_to">To: %s</string>
    <string name="compose_details_subject">Subject: %s</string>
    <string name="compose_details_priority">Priority: %s</string>
    <string name="compose_details_size">Size: %s</string>
    <string name="compose_details_sent">Sent: %s</string>
    <string name="compose_details_received">Received: %s</string>
    <string name="compose_details_delivered">Delivered: %s</string>
    <string name="compose_details_error_code">Error code: %d</string>
    <string name="compose_attach_cd">Add an attachment</string>
    <string name="compose_gallery_cd">Attach a photo</string>
    <string name="compose_camera_cd">Take a photo</string>
    <string name="compose_schedule_cd">Schedule message</string>
    <string name="compose_contact_cd">Attach a contact</string>
    <string name="compose_file_cd">Attach a file</string>
    <string name="compose_paste">Paste Text</string>
    <string name="compose_speech_to_text">Speech to text</string>
    <string name="compose_speech_to_text_unavailable">Speech recognition is not available</string>
    <string name="compose_contact_error">Error reading contact</string>
    <string name="compose_audio_cd">Attach audio</string>
    <string name="compose_audio_record_cd">Record audio</string>
    <string name="compose_audio_recording_message">Recording in progress. Choose Stop recording when you are done.</string>
    <string name="compose_audio_record_ready_message">Recording is ready. Choose Attach to add it to the message, or Cancel to discard it.</string>
    <string name="compose_audio_record_idle_message">Choose Start recording to begin a new audio recording.</string>
    <string name="compose_audio_record_error">Couldn\'t record audio</string>
    <string name="compose_audio_permission_denied">Microphone permission is required to record audio</string>
    <string name="compose_attach_action">Attach</string>
    <string name="compose_audio_start_action">Start recording</string>
    <string name="compose_audio_stop_action">Stop recording</string>
    <string name="compose_audio_record_idle_compact">Tap mic</string>
    <string name="compose_audio_recording_compact">Recording</string>
    <string name="compose_audio_record_ready_compact">Attach</string>
    <string name="audio_message_label">Audio message</string>
    <string name="audio_message_progress_format">%1$s / %2$s</string>
    <string name="compose_attachment_option_play">Play</string>
    <string name="compose_attachment_option_remove">Remove</string>
    <string name="compose_attachment_play">Play attachment</string>
    <string name="compose_attachment_play_numbered">Play attachment %1$d</string>
    <string name="compose_attachment_remove">Remove attachment</string>
    <string name="compose_attachment_remove_numbered">Remove attachment %1$d</string>
    <string name="compose_attachment_remove_all">Remove all attachments</string>
    <string name="compose_attachment_menu_title">Attachment</string>
    <string name="compose_attachment_play_short">Play</string>
    <string name="compose_attachment_play_numbered_short">Play %1$d</string>
    <string name="compose_attachment_remove_short">Remove</string>
    <string name="compose_attachment_remove_numbered_short">Remove %1$d</string>
    <string name="compose_attachment_remove_all_short">Remove all</string>
    <string name="compose_video_cd">Attach a video</string>
    <string name="compose_video_record_cd">Take a video</string>
    <string name="compose_sim_changed_toast">SIM %1$d (%2$s) selected</string>
    <string name="compose_sim_cd">%s selected, change SIM card</string>
    <string name="compose_send_cd">Send message</string>
    <string name="message_status_sending">Sending…</string>
    <string name="message_status_delivered">Delivered %s</string>
    <string name="message_status_failed">Failed to send. Tap to try again</string>
    <string name="info_title">Details</string>
    <string name="info_copied_address">Address copied</string>
    <string name="info_name">Conversation title</string>
    <string name="info_notifications">Notifications</string>
    <string name="info_theme">Theme</string>
    <string name="info_archive">Archive</string>
    <string name="info_unarchive">Unarchive</string>
    <string name="info_block">Block</string>
    <string name="info_unblock">Unblock</string>
    <string name="info_delete">Delete conversation</string>
    <string name="gallery_error">Couldn\'t load media</string>
    <string name="gallery_toast_saved">Saved to gallery</string>
    <string name="backup_title">Backup and restore</string>
    <string name="backup_backing_up">Backing up messages</string>
    <string name="backup_restoring">Restoring from backup</string>
    <string name="backup_last">Last backup</string>
    <string name="backup_loading">Loading…</string>
    <string name="backup_never">Never</string>
    <string name="backup_restore_title">Restore</string>
</resources>