<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/view_recipients"
        android:icon="@drawable/ic_person_black_24dp"
        android:iconTint="?android:attr/textColorSecondary"
        android:title="@string/menu_view_recipients" />

    <item
        android:id="@+id/schedule_message"
        android:icon="@drawable/ic_event_black_24dp"
        android:iconTint="?android:attr/textColorSecondary"
        android:title="@string/compose_schedule_cd" />

    <item
        android:id="@+id/call"
        android:icon="@drawable/ic_call_white_24dp"
        android:iconTint="?android:attr/textColorSecondary"
        android:title="@string/menu_call" />

    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_info_black_24dp"
        android:iconTint="?android:attr/textColorSecondary"
        android:title="@string/info_title" />

</menu>
